@@ -1,0 +1,10 @@
+
+#ifndef __SWFDEC_ACTIONS_H__
+#define __SWFDEC_ACTIONS_H__
+
+#include <swfdec_decoder.h>
+#include <swfdec_buffer.h>
+
+int swfdec_action_script_execute (SwfdecDecoder * s, SwfdecBuffer *buffer);
+
+#endif
